Merapikan string resource

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -51,8 +51,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:fontFamily="@font/poppinsbold"
-                android:text="@string/profile_name"
+                android:fontFamily="@font/poppinsmedium"
+                android:textStyle="bold"
+                android:text="@string/user_name"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/ci_profile_image"
                 app:layout_constraintStart_toStartOf="@+id/ci_profile_image"
@@ -64,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/grey"
                 android:fontFamily="@font/poppinsmedium"
-                android:text="@string/profile_username"
+                android:text="@string/user_username"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="@+id/tv_profile_name"
                 app:layout_constraintStart_toStartOf="@+id/tv_profile_name"
@@ -85,8 +86,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="32dp"
-                android:fontFamily="@font/poppinsbold"
-                android:text="@string/followers_count_template"
+                android:fontFamily="@font/poppinsmedium"
+                android:textStyle="bold"
+                android:text="@string/user_followers"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/v_line"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -110,8 +112,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:fontFamily="@font/poppinsbold"
-                android:text="@string/following_count_template"
+                android:fontFamily="@font/poppinsmedium"
+                android:textStyle="bold"
+                android:text="@string/user_following"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -169,7 +172,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppinsmedium"
-                android:text="@string/profile_bio"
+                android:text="@string/user_bio"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_bio_icon"
                 app:layout_constraintStart_toStartOf="@id/tv_bio_template"
@@ -217,7 +220,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppinsmedium"
-                android:text="@string/profile_email"
+                android:text="@string/user_email"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_email_icon"
                 app:layout_constraintStart_toStartOf="@+id/tv_email_template"
@@ -264,7 +267,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppinsmedium"
-                android:text="@string/profile_location"
+                android:text="@string/user_location"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_location_icon"
                 app:layout_constraintStart_toStartOf="@+id/tv_location_template"
@@ -310,7 +313,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppinsmedium"
-                android:text="@string/profile_organization"
+                android:text="@string/user_organization"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_organization_icon"
                 app:layout_constraintStart_toStartOf="@+id/tv_organization_template"
