--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,13 +10,13 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:windowLightStatusBar">true</item>
-        <item name="android:statusBarColor">?attr/colorOnPrimary</item>
+        <item name="android:statusBarColor">@color/blue</item>
         <!-- Customize your theme here. -->
     </style>
 
     <style name="toolbar_text">
-        <item name="android:fontFamily">@font/poppinsbold</item>
+        <item name="android:fontFamily">@font/poppinsmedium</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textSize">20sp</item>\
     </style>
 
