--- a/app/src/main/res/layout/item_person_list.xml
+++ b/app/src/main/res/layout/item_person_list.xml
@@ -4,9 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardElevation="4dp"
     android:background="?attr/colorOnPrimary"
-    app:cardCornerRadius="8dp"
     android:layout_margin="8dp">
     
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:fontFamily="@font/poppinsmedium"
-            android:text="Michael Steven"
+            android:text="@string/user_search_name_template"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -39,11 +37,11 @@
             tools:ignore="MissingConstraints" />
 
         <TextView
-            android:id="@+id/tv_person_username"
+            android:id="@+id/tv_user_type"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppinsmedium"
-            android:text="michaelsteven2345"
+            android:text="@string/user_type"
             android:textColor="@color/grey"
             android:textSize="11sp"
             app:layout_constraintBottom_toBottomOf="parent"
