Menyelesaikan semua fitur 1 fragment search (belum dirapikan)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,13 +21,14 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:minHeight="?attr/actionBarSize"
+        android:layout_height="65dp"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         app:itemBackground="@drawable/nav_bar_lines"
         app:itemRippleColor="@android:color/transparent"
         app:itemTextAppearanceActiveBoldEnabled="false"
+        app:itemTextAppearanceActive="@style/label_text_bottom_nav_inactive"
+        app:itemTextAppearanceInactive="@style/label_text_bottom_nav_inactive"
         app:itemActiveIndicatorStyle="@style/active_bottom_nav"
         android:background="?attr/colorOnPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
