--- a/app/src/main/res/layout/item_person_list.xml
+++ b/app/src/main/res/layout/item_person_list.xml
@@ -4,8 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="?attr/colorOnPrimary"
-    android:layout_margin="8dp">
+    android:background="?attr/colorOnPrimary">
     
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
