--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,4 +23,12 @@
     <style name="active_bottom_nav" parent="@style/Widget.Material3.BottomNavigationView.ActiveIndicator">
         <item name="android:color">?attr/colorOnPrimary</item>
     </style>
+    
+    <style name="label_text_bottom_nav_inactive" parent="@style/TextAppearance.AppCompat.Caption">
+        <item name="android:textSize">11sp</item>
+    </style>
+
+    <style name="label_text_bottom_nav_active." parent="@style/TextAppearance.AppCompat.Caption">
+        <item name="android:textSize">11sp</item>
+    </style>
 </resources>
