Menyelesaikan fitur pindah fragment, dari SearchFragment.kt ke DetailFragment.kt (belum dirapikan)

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -8,12 +8,13 @@
     tools:context=".ui.profile.ProfileFragment">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar_profile"
         android:background="@color/white"
+        app:liftOnScrollColor="@color/grey_3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/app_bar_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
@@ -31,6 +32,8 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cns_detail"
+            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -38,7 +41,7 @@
                 android:id="@+id/ci_profile_image"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="10dp"
                 android:src="@drawable/profile_image_template"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -108,7 +111,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_followers_count" />
 
             <TextView
-                android:id="@+id/tv_following_count_template"
+                android:id="@+id/tv_following_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
@@ -129,9 +132,9 @@
                 android:text="@string/following_template"
                 android:textColor="@color/grey"
                 android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="@+id/tv_following_count_template"
-                app:layout_constraintStart_toStartOf="@+id/tv_following_count_template"
-                app:layout_constraintTop_toBottomOf="@+id/tv_following_count_template"/>
+                app:layout_constraintEnd_toEndOf="@+id/tv_following_count"
+                app:layout_constraintStart_toStartOf="@+id/tv_following_count"
+                app:layout_constraintTop_toBottomOf="@+id/tv_following_count"/>
 
             <View
                 android:id="@+id/line2"
@@ -310,7 +313,7 @@
 
             <TextView
                 android:id="@+id/tv_user_organization"
-                android:layout_width="wrap_content"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppinsmedium"
                 android:text="@string/user_organization"
@@ -367,5 +370,13 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+    <ProgressBar
+        android:id="@+id/pb_detail_person"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:indeterminateTint="@color/blue"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
