--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,6 +10,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_profile"
         android:background="@color/white"
+        app:liftOnScrollColor="@color/grey_3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -38,7 +39,7 @@
                 android:id="@+id/ci_profile_image"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="10dp"
                 android:src="@drawable/profile_image_template"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
