--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -33,8 +33,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cns_profile"
-            android:layout_width="match_parent"
             android:visibility="invisible"
+            android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -300,27 +300,27 @@
                 tools:ignore="ContentDescription" />
 
             <TextView
-                android:id="@+id/tv_organization_template"
+                android:id="@+id/tv_company_template"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:fontFamily="@font/poppinsmedium"
-                android:text="@string/organization_template"
+                android:text="@string/company_template"
                 android:textColor="@color/grey"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/iv_organization_icon"
                 app:layout_constraintTop_toTopOf="@+id/iv_organization_icon" />
 
             <TextView
-                android:id="@+id/tv_user_organization"
+                android:id="@+id/tv_user_company"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppinsmedium"
                 android:text="@string/user_organization"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_organization_icon"
-                app:layout_constraintStart_toStartOf="@+id/tv_organization_template"
-                app:layout_constraintTop_toBottomOf="@+id/tv_organization_template"
+                app:layout_constraintStart_toStartOf="@+id/tv_company_template"
+                app:layout_constraintTop_toBottomOf="@+id/tv_company_template"
                 app:layout_constraintVertical_bias="0.0"/>
 
             <View
@@ -331,7 +331,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginStart="32dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_user_organization"/>
+                app:layout_constraintTop_toBottomOf="@id/tv_user_company"/>
 
             <ImageView
                 android:id="@+id/iv_repository_icon"
