--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -89,6 +89,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="32dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:fontFamily="@font/poppinsmedium"
                 android:textStyle="bold"
                 android:text="@string/user_followers"
@@ -115,6 +117,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:fontFamily="@font/poppinsmedium"
                 android:textStyle="bold"
                 android:text="@string/user_following"
