--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -47,6 +47,9 @@
             android:name="data"
             app:argType="string"
             android:defaultValue="dwiaziprasetya"/>
+        <action
+            android:id="@+id/action_navigation_detail_to_navigation_following_follower"
+            app:destination="@id/navigation_following_follower" />
     </fragment>
 
 </navigation>
