--- a/app/src/main/res/layout/fragment_followers.xml
+++ b/app/src/main/res/layout/fragment_followers.xml
@@ -5,11 +5,26 @@
     android:layout_height="match_parent"
     tools:context=".ui.followingFollower.FollowersFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:layout_marginEnd="8dp"-->
+<!--        android:layout_marginStart="8dp"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        tools:listitem="@layout/item_person_list"/>-->
+
+<!--    <ProgressBar-->
+<!--        android:id="@+id/pb_followers"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_marginTop="50dp"-->
+<!--        android:indeterminateTint="@color/blue"/>-->
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Followers"
-        android:gravity="center"/>
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Hai"/>
 
 </FrameLayout>
