--- a/app/src/main/res/layout/fragment_following.xml
+++ b/app/src/main/res/layout/fragment_following.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.followingFollower.FollowingFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/text2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
