--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -39,7 +39,7 @@
                 android:indeterminateTint="@color/blue"
                 app:layout_constraintEnd_toEndOf="@+id/rv_person_list"
                 app:layout_constraintStart_toStartOf="@+id/rv_person_list"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@id/rv_person_list" />
             
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -48,6 +48,7 @@
     <com.google.android.material.appbar.AppBarLayout
         app:liftOnScrollColor="@color/grey_3"
         android:layout_height="75dp"
+        android:id="@+id/app_bar_search"
         android:background="?attr/colorOnPrimary"
         android:layout_width="match_parent">
 
@@ -59,7 +60,6 @@
             app:backgroundTint="@color/grey_3"
             android:layout_height="wrap_content"
             android:layout_width="match_parent" />
-
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.search.SearchView
@@ -70,9 +70,6 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         app:layout_anchor="@id/searchBar">
-
-        <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
-
     </com.google.android.material.search.SearchView>
 
     <include
