Menambahkan viewmodel pada following dan followers fragment

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -53,7 +53,7 @@
     </fragment>
     <fragment
         android:id="@+id/followersFragment"
-        android:name="com.example.githubuserapp.ui.followingFollower.FollowersFragment"
+        android:name="com.example.githubuserapp.ui.followingFollower.followers.FollowersFragment"
         android:label="fragment_followers"
         tools:layout="@layout/fragment_followers" />
 
