Menyelesaikan dan berhasil menampilkan data followers (belum dirapikan)

--- a/app/src/main/res/layout/fragment_followers.xml
+++ b/app/src/main/res/layout/fragment_followers.xml
@@ -5,26 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".ui.followingFollower.followers.FollowersFragment">
 
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:layout_marginEnd="8dp"-->
-<!--        android:layout_marginStart="8dp"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        tools:listitem="@layout/item_person_list"/>-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_followers"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/item_person_list"/>
 
-<!--    <ProgressBar-->
-<!--        android:id="@+id/pb_followers"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:layout_marginTop="50dp"-->
-<!--        android:indeterminateTint="@color/blue"/>-->
-
-    <TextView
-        android:id="@+id/text"
+    <ProgressBar
+        android:id="@+id/pb_followers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Hai"/>
+        android:layout_marginTop="50dp"
+        android:indeterminateTint="@color/blue"/>
 
 </FrameLayout>
