--- a/app/src/main/res/layout/fragment_followers.xml
+++ b/app/src/main/res/layout/fragment_followers.xml
@@ -7,6 +7,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_followers"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_width="match_parent"
