--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,7 +15,11 @@
         android:id="@+id/navigation_profile"
         android:name="com.example.githubuserapp.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_navigation_profile_to_navigation_following_follower"
+            app:destination="@id/navigation_following_follower" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_search"
