--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -2,13 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/plus_menu"
-        android:title="@string/plus_menu"
+        android:id="@+id/notification_menu"
+        android:title="@string/notification_menu"
         app:showAsAction="ifRoom"
         android:icon="@drawable/notification_icon"/>
     <item
-        android:id="@+id/email_notification_menu"
-        android:title="@string/message_notification_menu"
-        app:showAsAction="never"
-        android:icon="@drawable/message_icon"/>
+        android:id="@+id/refresh_menu"
+        android:title="@string/menu_refresh"
+        app:showAsAction="never"/>
 </menu>
