Merapikan adapter dan memperbarui fragment followers dan following menjadi 1 fragment

--- a/app/src/main/res/layout/fragment_followers.xml
+++ b/app/src/main/res/layout/fragment_followers.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.followingFollower.followers.FollowersFragment">
+    tools:context=".ui.followingFollower.followItems.FollowItemsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_followers"
