--- a/app/src/main/res/layout/fragment_following_follower.xml
+++ b/app/src/main/res/layout/fragment_following_follower.xml
@@ -33,6 +33,7 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
+        app:tabRippleColor="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorOnPrimary"
