--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="grey_2">#C6C6C6</color>
     <color name="grey_3">#F0F0F0</color>
     <color name="blue">#0e3ad6</color>
+    <color name="red">#D22B2B</color>
 </resources>
