--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,8 +15,7 @@
     </style>
 
     <style name="toolbar_text">
-        <item name="android:fontFamily">@font/poppinsmedium</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/poppinsbold</item>
         <item name="android:textSize">20sp</item>\
     </style>
 
