--- a/app/src/main/res/layout/fragment_following_follower.xml
+++ b/app/src/main/res/layout/fragment_following_follower.xml
@@ -32,6 +32,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.tabs.TabLayout
+        android:contentDescription="@string/tab_layout_desc"
         android:id="@+id/tabs"
         app:tabRippleColor="@android:color/transparent"
         android:layout_width="match_parent"
