--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,8 +20,6 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/home_menu"
-            app:title="@string/title_home"
             app:titleTextAppearance="@style/toolbar_text"/>
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -30,6 +28,7 @@
         android:id="@+id/imageView"
         android:layout_width="300dp"
         android:layout_height="300dp"
+        android:visibility="invisible"
         android:src="@drawable/home_image_template"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,6 +42,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppinsbold"
+        android:visibility="invisible"
         android:text="@string/home_template_1"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -54,6 +54,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:fontFamily="@font/poppinsmedium"
         android:text="@string/home_template_2"
         android:textAlignment="center"
