--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,6 +24,9 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
             app:destination="@id/navigation_following_follower" />
+        <action
+            android:id="@+id/action_navigation_profile_to_settingsActivity"
+            app:destination="@id/settingsActivity" />
     </fragment>
 
     <fragment
@@ -71,5 +74,11 @@
         android:name="com.example.githubuserapp.ui.followingFollower.followItems.FollowItemsFragment"
         android:label="fragment_followers"
         tools:layout="@layout/fragment_followers" />
+
+    <activity
+        android:id="@+id/settingsActivity"
+        android:name="com.example.githubuserapp.ui.settings.SettingsActivity"
+        android:label="activity_settings"
+        tools:layout="@layout/activity_settings" />
 
 </navigation>
