--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -25,12 +25,26 @@
             app:navigationIcon="@drawable/baseline_arrow_back_24"
             app:title="@string/settings_menu"
             app:titleMarginTop="18dp"
-            app:titleTextAppearance="@style/toolbar_text_following_followers"/>
+            app:titleTextAppearance="@style/toolbar_text_following_followers" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:background="@android:color/transparent"
+        android:drawableStart="@drawable/switch_theme_icon"
+        android:drawableEnd="@drawable/forward_icon"
+        android:drawablePadding="16dp"
+        android:fontFamily="@font/poppinsmedium"
+        android:gravity="start|center_vertical|end"
+        android:text="Theme"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
