--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -35,7 +35,6 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cns_profile"
-            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -94,13 +93,14 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:fontFamily="@font/poppinsmedium"
-                android:textStyle="bold"
                 android:text="@string/user_followers"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/v_line"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/v_line" />
+                app:layout_constraintTop_toTopOf="@+id/v_line"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <TextView
                 android:id="@+id/tv_followers_template"
@@ -122,13 +122,14 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:fontFamily="@font/poppinsmedium"
-                android:textStyle="bold"
                 android:text="@string/user_following"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/v_line"
-                app:layout_constraintTop_toTopOf="@+id/v_line" />
+                app:layout_constraintTop_toTopOf="@+id/v_line"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <TextView
                 android:id="@+id/tv_following_template"
