--- a/app/src/main/res/layout/fragment_followers.xml
+++ b/app/src/main/res/layout/fragment_followers.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorOnPrimary"
     tools:context=".ui.followingFollower.followItems.FollowItemsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_followers"
+        android:background="?attr/colorOnPrimary"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
