--- a/app/src/main/res/layout/fragment_following_follower.xml
+++ b/app/src/main/res/layout/fragment_following_follower.xml
@@ -12,7 +12,7 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="?attr/colorOnPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -43,6 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
     <androidx.viewpager2.widget.ViewPager2
+        android:background="?attr/colorOnPrimary"
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
