--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,6 @@
     <color name="grey">#919191</color>
     <color name="grey_2">#C6C6C6</color>
     <color name="grey_3">#F0F0F0</color>
-    <color name="blue">#0e3ad6</color>
+    <color name="blue">#2196F3</color>
     <color name="red">#D22B2B</color>
 </resources>
