--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.GithubUserApp.MySplash" parent="Theme.Splas"
+    <style name="Theme.GithubUserApp.MySplash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">?attr/colorOnPrimary</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/github_mark_white</item>
+        <item name="postSplashScreenTheme">@style/Theme.AppCompat</item>
+    </style>
 </resources>
