Menambahkan kondisi saat icon favourite di klik

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -8,6 +8,7 @@
     tools:context=".ui.profile.ProfileFragment">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
         android:background="?attr/colorOnPrimary"
         app:liftOnScrollColor="@color/grey_3"
         android:layout_width="match_parent"
